Start building proper fractal control

--- a/src/BlazorFractals/BlazorFractals.csproj
+++ b/src/BlazorFractals/BlazorFractals.csproj
@@ -16,4 +16,10 @@
     <ProjectReference Include="..\ApplicationCore\ApplicationCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Shared\FractalPanel.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
+  </ItemGroup>
+
 </Project>
