--- a/src/BlazorFractals/BlazorFractals.csproj
+++ b/src/BlazorFractals/BlazorFractals.csproj
@@ -22,4 +22,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\sample-data\weather.json" />
+  </ItemGroup>
+
 </Project>
