--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Run tests
       run: dotnet test --configuration Release
       
-  deploy:
+  deploy-client:
     needs: build
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
@@ -31,23 +31,31 @@ jobs:
       with:
         dotnet-version: 3.1.301
     - name: Publish client
-      run: dotnet publish --configuration Release --project src/BlazorFractals/BlazorFractals.csproj --output build-client
+      run: dotnet publish src/BlazorFractals/BlazorFractals.csproj --configuration Release --output build
     - name: Deploy to Github Pages
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BASE_BRANCH: master # The branch the action should deploy from.
         BRANCH: gh-pages # The branch the action should deploy to.
-        FOLDER: build-client/wwwroot # The folder the action should deploy.
+        FOLDER: build/wwwroot # The folder the action should deploy.
         SINGLE_COMMIT: true
+  
+  deploy-function:
+    needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.301
     - name: Publish Function
-      run: dotnet publish --configuration Release --project src/Function/Function.csproj --output build-function
+      run: dotnet publish src/Function/Function.csproj --configuration Release --output build
     - name: Deploy to Azure Functions
       uses: Azure/functions-action@v1.1.4
       with:
-        # Name of the Azure Function App
         app-name: FractalGenerator
-        # Path to package or folder. *.zip or a folder to deploy
-        package: build-function
-        # Publish profile (*.publishsettings) file contents with web deploy secrets
+        package: build
         publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
