Add presets page

--- a/src/BlazorFractals/BlazorFractals.csproj
+++ b/src/BlazorFractals/BlazorFractals.csproj
@@ -21,10 +21,17 @@
     <Content Update="Shared\FractalPanel.razor">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
+    <Content Update="Pages\Presets.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
     <_ContentIncludedByDefault Remove="wwwroot\sample-data\weather.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\img" />
   </ItemGroup>
 
 </Project>
