Add pathbase argument for using Rider

--- a/src/BlazorFractals/Properties/launchSettings.json
+++ b/src/BlazorFractals/Properties/launchSettings.json
@@ -19,6 +19,7 @@
     "BlazorFractals": {
       "commandName": "Project",
       "launchBrowser": true,
+      "commandLineArgs": "--pathbase=/blazor-fractals",
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
